fixed overlapping padding

--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-.lightbox {
-	width: 100%;
-}
 
 .email {
 	padding: 50px;
@@ -95,7 +92,8 @@
 	}
 
 	.work {
-		margin-bottom: -140px;
+		padding-bottom: 50px;
+		margin-bottom: -100px;
 		font-size: 24px;
 		color: #615E5C;
 	}
@@ -121,3 +119,11 @@ hr {
 
 a { color: red; }
 a:hover { color: #615E5C; }
+
+@media(min-width: 1000px){
+	.work {
+		margin-bottom: -200px;
+		font-size: 24px;
+		color: #615E5C;
+	}
+}
